C++ Project/.metadata/.plugins/org.eclipse.cdt.ui/Sahur-imsa'.build.log
17:39:56 **** Incremental Build of configuration Debug for project Sahur-imsa' ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o sahur.o "..\\sahur.cpp" 
..\sahur.cpp: In function 'int hitung(int, int)':
..\sahur.cpp:15:12: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
   printf(Hx);
            ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\cstdio:42:0,
                 from ..\sahur.cpp:2:
c:\mingw\include\stdio.h:294:37: error:   initializing argument 1 of 'int printf(const char*, ...)' [-fpermissive]
 _CRTIMP int __cdecl __MINGW_NOTHROW printf (const char*, ...);
                                     ^
..\sahur.cpp:22:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^

17:39:56 Build Finished (took 219ms)

